# TopAlbum

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
src/: app.py  database.py  models.py  routers.py  security.py
src/albums/: models.py  routers.py  services.py
src/auth/: routers.py
src/share/: models.py
src/users/: models.py  router.py
static/: style-home.css  style.css
static/albums/: list.css  style.css
static/auth/: login.css
static/users/: register.css
templates/: album.html  base.html  create.html  home.html  index.html  login.html  register-user.html
templates/albums/: album.html  list.html
templates/auth/: login.html
templates/users/: register.html  user.html
test/: conftest.py  test_albums.py  test_app.py
